# MyGameEngine

./: CMakeLists.txt  README.md
include/: Camera.h  Mesh.h  Model.h  Shader.h  Window.h
src/: Window.cpp  main.cpp
src/shaders/: shader.fs  shader.vs
